# diesel-derives-extra

diesel_derives_extra/: Cargo.toml
diesel_derives_extra/src/: lib.rs
diesel_derives_extra/tests/: model.rs
diesel_derives_traits/: Cargo.toml
diesel_derives_traits/src/: lib.rs
