[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>", "Berkus Decker <berkus+cargo@gmail.com"]
description = "Automatically derive some simple CRUD methods for your Diesel models"
exclude = [
    "tests/*",
]
homepage = "https://github.com/shssoichiro/diesel-derives-extra"
license = "MIT"
name = "diesel_derives_extra"
repository = "https://github.com/shssoichiro/diesel-derives-extra"
version = "0.2.0"
edition = "2021"

[lib]
name = "diesel_derives_extra"
proc-macro = true

[dependencies]
diesel = "2.0"
diesel_derives_traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[features]
"default" = ["postgres"]
"postgres" = ["diesel/postgres"]