[package]
name = "diesel_derives_traits"
description = "Traits for diesel_derives_extra"
homepage = "https://github.com/shssoichiro/diesel-derives-extra"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-derives-extra"
version = "0.2.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>", "Berkus Decker <berkus+cargo@gmail.com"]
edition = "2021"

[dependencies]
diesel = "2.0"
